test: 여행 상세 조회 서비스 테스트 [AIR-93]