@@ -4,6 +4,8 @@ import static com.gurudev.aircnc.domain.trip.entity.TripStatus.RESERVED;
 import static com.gurudev.aircnc.domain.util.Fixture.createGuest;
 import static com.gurudev.aircnc.domain.util.Fixture.createHost;
 import static com.gurudev.aircnc.domain.util.Fixture.createRoom;
+import static com.gurudev.aircnc.domain.util.Fixture.createRoomPhoto;
+import static com.gurudev.aircnc.util.AssertionUtil.assertThatNotFoundException;
 import static java.time.LocalDate.now;
 import static java.time.Period.between;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -11,10 +13,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import com.gurudev.aircnc.domain.member.entity.Member;
 import com.gurudev.aircnc.domain.member.service.MemberService;
 import com.gurudev.aircnc.domain.room.entity.Room;
+import com.gurudev.aircnc.domain.room.entity.RoomPhoto;
 import com.gurudev.aircnc.domain.room.service.RoomService;
 import com.gurudev.aircnc.domain.trip.entity.Trip;
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -28,19 +30,23 @@ class TripServiceImplTest {
 
   @Autowired
   private TripService tripService;
+
   @Autowired
   private MemberService memberService;
+
   @Autowired
   private RoomService roomService;
 
-  private LocalDate checkIn;
-  private LocalDate checkOut;
   private Member guest;
   private Room room;
-  private int totalPrice;
+  private LocalDate checkIn;
+  private LocalDate checkOut;
   private int headCount;
+  private int totalPrice;
+
   private Trip trip1;
   private Trip trip2;
+  private RoomPhoto roomPhoto;
 
   @BeforeEach
   void setUp() {
@@ -48,7 +54,8 @@ class TripServiceImplTest {
     memberService.register(host);
 
     room = createRoom(host);
-    roomService.register(room, Collections.emptyList());
+    roomPhoto = createRoomPhoto();
+    roomService.register(room, List.of(roomPhoto));
 
     guest = createGuest();
     memberService.register(guest);
@@ -78,5 +85,23 @@ class TripServiceImplTest {
     List<Trip> findTrips = tripService.getByGuest(guest);
 
     assertThat(findTrips).hasSize(2).containsExactly(trip1, trip2);
+  }
+
+  @Test
+  void 여행_상세_조회() {
+    Trip trip = tripService.getById(trip1.getId());
+
+    assertThat(trip).isEqualTo(trip1);
+    assertThat(trip.getGuest()).isEqualTo(guest);
+    assertThat(trip.getRoom()).isEqualTo(room);
+    assertThat(trip.getRoom().getRoomPhotos()).containsExactly(roomPhoto);
+  }
+
+  @Test
+  void 없는_아이디로_여행_상세_조회_실패() {
+    Long invalidTripId = -1L;
+
+    assertThatNotFoundException()
+        .isThrownBy(() -> tripService.getById(invalidTripId));
   }
 }
